[package]
name = "testpro"
version = "0.1.0"
authors = ["top1st <riguang102@gmail.com>"]

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.5.13"
simplelog = "0.5.3"
postgres = "0.15.2"
dotenv = "0.13.0"
diesel = { version = "1.3.1", features = ["chrono", "postgres"] }
chrono = "0.4.6"
grpcio = "0.4.0"

[dev-dependencies]

migrant = "0.11.5"
